deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  labels:
    app-name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: uptime-kuma
  template:
    metadata:
      labels:
        app-name: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: "louislam/uptime-kuma:1.23.16-debian"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: storage
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
            exec:
              command:
                - extra/healthcheck
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
          resources:
            limits:
              cpu: 100m
              memory: 150Mi
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
