service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  labels:
    app-name: uptime-kuma
spec:
  ports:
    - port: 8080
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app-name: uptime-kuma
  type: ClusterIP
